-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.3
-
8e2368bce81180c12a607afd101964ef1e8a1f1b
The schema validation creates memory leaks, some of the used memory are not free'd.
See attached project:
I modified your example 'schema'. I added a userdefined XSD file and two xml sample files to your example 'schema'.
To reproduce the problem:
Select the schema 'ZCC schema' and 'ZCC job big'.
Each time the 'validation' is executed, the amount of memory increases about 3 MBytes.
A possible patch is attached.