Fix memory leaks in schema validation

Bug fix for QTBUG-12550. QExplicitlySharedDataPointer is excessively
used in XmlPatterns code. This forumate cyclic loops in some situation.
This fix replace the shared data pointer with normal C++ pointer to
break the loop.

Task-number: QTBUG-12550
Reviewed-by: Tomi Vihria